added nuxt auth package and create console google app for google login

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,6 @@
-MONGO = ""
+MONGO = mongodb://127.0.0.1:27017/nextblog
+
+GOOGLE_CLIENT_ID = 514796132155-j6lcgngpmh9ipu6r9kklp6i8fvt7j1fm.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+NEXTAUTH_SECRET = "this is secret key"
+NEXTAUTH_URL = "http://localhost:3000"
